# oslo.serialization

./: .coveragerc  .gitignore  .gitreview  .pre-commit-config.yaml  CONTRIBUTING.rst  HACKING.rst  README.rst  lower-constraints.txt  openstack-common.conf  pyproject.toml  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
doc/: requirements.txt
doc/source/: api.rst  conf.py  index.rst  usage.rst
doc/source/install/: index.rst
oslo/serialization/: jsonutils.py
oslo/serialization/openstack/common/: gettextutils.py  importutils.py  strutils.py
oslo_serialization/: _types.py  base64.py  jsonutils.py  msgpackutils.py  yamlutils.py
oslo_serialization/serializer/: base_serializer.py  json_serializer.py  msgpack_serializer.py
oslo_serialization/tests/: test_base64.py  test_jsonutils.py  test_msgpackutils.py  test_yamlutils.py
releasenotes/notes/: bug-1908607-fix-json-to_primitive-IO-OBjects-04faff4a1b5cf48f.yaml  deprecate-yamlutils-module-96eee55f7ae57382.yaml  drop-anyjson-patching-27f68746a2b2f556.yaml  implement-zoneinfo-to-remove-pytz-c136b33bbfbfe59f.yaml  jsonutils-to_primitive-value-error-89338f90310e9518.yaml  remove-yamlutils-94c921247ab33003.yaml
releasenotes/source/: conf.py  index.rst
tests/: test_jsonutils.py  test_msgpackutils.py  test_serialization.py  test_warning.py
