[metadata]
name = oslo.serialization
summary = Oslo Serialization library
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/oslo.serialization/latest/
python-requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[files]
packages =
    oslo_serialization

[compile_catalog]
directory = oslo.serialization/locale
domain = oslo.serialization

[update_catalog]
domain = oslo.serialization
output_dir = oslo.serialization/locale
input_file = oslo.serialization/locale/oslo.serialization.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = oslo.serialization/locale/oslo.serialization.pot
